# python-tomlconfig

./: README.md  pyproject.toml
tomlconfig/: __init__.py  tomlconfig.py
